--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "chart.js": "^2.7.2",
+    "material-ui": "^1.0.0-beta.47",
     "react": "^16.3.2",
     "react-chartjs": "^1.2.0",
     "react-dom": "^16.3.2",
