--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "chart.js": "^2.7.2",
+    "highcharts": "^6.1.0",
+    "lodash": "^4.17.10",
     "material-ui": "^1.0.0-beta.47",
     "react": "^16.3.2",
     "react-chartjs": "^1.2.0",
     "react-dom": "^16.3.2",
+    "react-highcharts": "^16.0.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
