--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-chartjs": "^1.2.0",
     "react-dom": "^16.3.2",
     "react-highcharts": "^16.0.2",
+    "react-loading": "^2.0.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
